--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ test-output/
 build/
 reports/
 
-application.log
+opencart.log
 ##############################
 ## Java
 ##############################
