--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,13 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectj.version}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -129,7 +135,7 @@
 					<suiteXmlFiles>
 						<!--<suiteXmlFile>
 							src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>-->
-						 <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> 
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
 
 					<argLine>
