--- a/src/test/resources/config/config.qa.properties
+++ b/src/test/resources/config/config.qa.properties
@@ -8,9 +8,9 @@ incognito = false
 
 highlight = false
 
-username = karishma@opencart.com
-password = Kari@123
+username = girisha@opencart.com
+password = test@123
 
 
 remote = true
-huburl = http://35.154.131.246:4444/wd/hub
+huburl = http://localhost:4444/wd/hub
