updated jenkins file

--- a/src/test/resources/config/config.qa.properties
+++ b/src/test/resources/config/config.qa.properties
@@ -8,9 +8,9 @@ incognito = false
 
 highlight = false
 
-username = girisha@opencart.com
+username = girish@opencart.com
 password = test@123
 
 
-remote = true
+remote = false
 huburl = http://localhost:4444/wd/hub
